<resources>
    <string name="app_name">DatabaseDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="show_label">Show All</string>
    <string name="delete_label">Delete First</string>
    <string name="list_label">Department List Test</string>
    <string name="dean">Dean</string>
    <string name="tower">Tower</string>
    <string name="cluster">Clusetrs</string>
    <string name="center">Center</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="done_button">Enter</string>
    <string name="department_label">Department Name</string>
    <string name="input">Search</string>
    <string name="title">NCC Department Directory</string>
</resources>
